--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,5 +21,6 @@
  #header {
  	width: 100%;
  	min-height: 293px;
- 	background: image-url('1300.jpg') no-repeat top center;
+ 	background: image-url('1300.jpg') no-repeat top center,
+ 				image-url('1300f.jpg') no-repeat bottom center;
  }
