--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,16 +12,98 @@
  *= require_tree .
  */
 
- @import 'bootstrap';
+@import 'bootstrap';
 
- body {
-    height: 100%;
- 	background: image-url('grid_noise.png') repeat;
- }
+body {
+  height: auto;
+  background: image-url('grid_noise.png') repeat;
+  -webkit-overflow-scrolling: touch
+}
 
- #header {
- 	width: 100%;
-    height: 100%;
- 	background: image-url('1300.jpg') no-repeat top center,
- 				image-url('1300f.jpg') no-repeat bottom center;
- }
+html, body {height:100%;overflow:auto}
+
+#wrapper {
+  width: 100%;
+  height: 100%;
+  background: image-url('1300.jpg') no-repeat top center,
+              image-url('1300f.jpg') no-repeat bottom center;
+}
+
+#st-trigger-effects {
+  width: 100%;
+  height:50px;
+  padding: 3px 5px;
+  box-shadow: 0px 1px 30px #5E5E5E;
+  position: static;
+  top:0px;
+  background: #e67e22;
+  overflow: visible !important;
+  -webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
+  #menu_btn {
+    -webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
+  }
+}
+
+img {
+  max-width: 100%;
+}
+
+.t-r {
+  text-align: right;
+}
+.t-c {
+  text-align: center;
+}
+
+.inline > * {
+  display: inline;
+}
+
+#footer {
+  display: block;
+//  width: 400px;
+}
+
+//###################  MENU  #########################
+
+.dropdown-menu {
+  background: image_url('satinweave.png');
+  text-shadow: 0 2px 1px #fff;
+  left: -100%;
+  padding: 18px 4px 4px 4px;
+  text-align: left;
+}
+
+
+#menu_content {
+
+}
+
+//ul#menu {
+//  display: block;
+//}
+//
+//ul#menu li {
+//  list-style: none;
+//  width: auto;
+//  height: auto;
+//  display: block;
+//
+//  ul{
+//    display: none;
+//    margin-left: 12px;
+//    padding: 0px;
+//  }
+//
+//  &:hover ul {
+//    display: block;
+//    position: absolute;
+//    background: #999;
+//    .row {width: 100%;}
+//  }
+//
+//}
+
+//###################  MENU  #########################
+
+
