--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -69,7 +69,7 @@ html
                   p TEST
 
               = yield
-              #footer
+              /#footer
                 p Copyright
 
     = javascript_include_tag "classie.js"
