--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,29 @@
 
 @import 'bootstrap';
 
+@mixin gradient($from, $to) {
+  /* fallback/image non-cover color */
+  background-color: $from;
+
+  /* Firefox 3.6+ */
+  background-image: -moz-linear-gradient($from, $to);
+
+  /* Safari 4+, Chrome 1+ */
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from($from), to($to));
+
+  /* Safari 5.1+, Chrome 10+ */
+  background-image: -webkit-linear-gradient($from, $to);
+
+  /* Opera 11.10+ */
+  background-image: -o-linear-gradient($from, $to);
+}
+
+@mixin gradient-radial($inner-color: #555, $outer-color: #333) {
+  background-image: -webkit-radial-gradient(circle, $inner-color, $outer-color);
+  background-image: radial-gradient(circle, $inner-color, $outer-color);
+  background-repeat: no-repeat;
+}
+
 body {
   height: auto;
   background: image-url('grid_noise.png') repeat;
@@ -66,43 +89,50 @@ img {
 
 //###################  MENU  #########################
 
+#menu {
+  margin: 30px 0 0 0;
+//  width: 80%;
+
+  a, .btn-group a {
+    @include gradient(#ffe11f, #fca612);
+    color: #111;
+    font-size: 1em;
+    border-right: 1px solid #ffe11f;
+    border-left: 1px solid #fca612;
+    width: 100%;
+    &:first-child {
+      border-left: none;
+    }
+    &:hover {
+      @include gradient(#ffee00, #fca612);
+    }
+  }
+
+  .btn-group {
+    width: 30%;
+  }
+
+}
+
 .dropdown-menu {
   background: image_url('satinweave.png');
   text-shadow: 0 2px 1px #fff;
-  left: -100%;
+  left: -1000%;
+  width: 1100%;
   padding: 18px 4px 4px 4px;
   text-align: left;
 }
 
 
-#menu_content {
-
+.menu-shadow {
+  width: 100%;
+  height: 13px;
+  background: image_url('header_shadow.png') no-repeat center center;
+  background-size: contain;
 }
 
-//ul#menu {
-//  display: block;
-//}
-//
-//ul#menu li {
-//  list-style: none;
-//  width: auto;
-//  height: auto;
-//  display: block;
-//
-//  ul{
-//    display: none;
-//    margin-left: 12px;
-//    padding: 0px;
-//  }
-//
-//  &:hover ul {
-//    display: block;
-//    position: absolute;
-//    background: #999;
-//    .row {width: 100%;}
-//  }
-//
-//}
+
+
 
 //###################  MENU  #########################
 
