--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -96,6 +96,46 @@ a.link {
   }
 }
 
+#timer {
+  p {margin: 0}
+  p#time {margin-top: 13px;}
+
+  p#time span {
+    font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
+//    font-weight: bold;
+    font-size: 2em;
+    padding: 5px 5px;
+    color: #fff;
+    background: #3f3f3f;
+    border-radius: 5px;
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0.52, #333333),
+        color-stop(0.53, #595959),
+        color-stop(1, #363636)
+    );
+    background-image: -o-linear-gradient(bottom, #333333 52%, #595959 53%, #363636 100%);
+    background-image: -moz-linear-gradient(bottom, #333333 52%, #595959 53%, #363636 100%);
+    background-image: -webkit-linear-gradient(bottom, #333333 52%, #595959 53%, #363636 100%);
+    background-image: -ms-linear-gradient(bottom, #333333 52%, #595959 53%, #363636 100%);
+    background-image: linear-gradient(to bottom, #333333 52%, #595959 53%, #363636 100%);
+
+    box-shadow: 0 1px 4px 0 #2f2f2f;
+    border: 1px solid #cccccc;
+
+  }
+  
+  p#time span.dot {
+    background: none;
+    color: #3f3f3f;
+    border: none;
+    box-shadow: none;
+  }
+  
+}
+
 #content-row {
   padding: 20px 0 0 0;
 }
@@ -367,6 +407,19 @@ a#menubtn.hightlight {
 }
 
 //###################  NEWSPAPER  #########################
+
+//###################  FOOTER  #########################
+
+#footer {
+  margin: 15px 0 0 0;
+  background: image_url('dark_fish_skin.png');
+  padding: 0 10px 10px 10px;
+  border-top: 2px solid #2E2F30;
+  color: #fff
+}
+
+//###################  FOOTER  #########################
+
 
 
 
