--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -39,8 +39,17 @@ html
                 .col-md-4
                   = render 'layouts/widgets'
 
-              /#footer
-                p Copyright
+            #footer
+              .container
+                .row
+                  .menu-shadow
+                  small Copyright
+                  br
+                  small Copyright
+                  br
+                  small Copyright
+                  br
+                  small Copyright
 
     = javascript_include_tag "sidebarEffects.js"
 
@@ -53,8 +62,54 @@ javascript:
       });
   }
 
+    function displayTime() {
+        var currentTime = new Date();
+        var hours = currentTime.getHours();
+        var minutes = currentTime.getMinutes();
+        var seconds = currentTime.getSeconds();
+
+
+
+
+        // If the hours digit is less than 10
+        if(hours < 10) {
+            // Add the "0" digit to the front
+            // so 9 becomes "09"
+            hours = "0" + hours;
+        }
+        // Format minutes and seconds the same way
+        if(minutes < 10) {
+            minutes = "0" + minutes;
+        }
+        if(seconds < 10) {
+            seconds = "0" + seconds;
+        }
+
+        $('p span#hours').html(hours)
+        $('p span#minutes').html(minutes)
+        $('p span#seconds').html(seconds)
+
+    }
+
+    // This runs the displayTime function the first time
+    displayTime();
+
+    // This makes our clock 'tick' by repeatedly
+    // running the displayTime function every second.
+    setInterval(displayTime, 1000);
+
+  //window.setInterval(function(){
+  //  var d = new Date();
+  //  var timenow = d.toLocaleTimeString();
+  //  $('#time p#time').html(timenow);
+  //}, 1000);
+
 
   $(document).ready(function(){
+
+    var d = new Date();
+    var timenow = d.toLocaleTimeString();
+    $('#time p#time').html(timenow);
 
     $("#menubtn").click(function () {
         $("#menubtn").toggleClass('hightlight');
@@ -65,7 +120,10 @@ javascript:
 
     var currPage = 1;
     $("a.next").click(function() {
-        loadMore(++currPage);
+        $(this).button('loading');
+        setTimeout(function () {
+          loadMore(++currPage);
+        });
     });
 
 
