--- a/app/views/posts/videos.html.slim
+++ b/app/views/posts/videos.html.slim
@@ -2,7 +2,12 @@
   - if (i != 0) && (i % 3).zero?
     .clearfix
   .col-md-4.t-c.newspaper-panel
-    h4 = video.title
-    hr.hr-newspaper
+    br
     .video-container
+      .spinner
+        .rect1
+        .rect2
+        .rect3
+        .rect4
+        .rect5
       = raw video.introtext
