--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,6 +35,7 @@ html
 
               #content-row.row
                 .col-md-8
+                  = render 'layouts/slider'
                   = yield
                 .col-md-4
                   = render 'layouts/widgets'
