--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,11 +1,5 @@
 #posts
   = render :partial => @posts
-= link_to_next_page @posts, 'Загрузить еще', :remote => true, :id=>"load_more_link", :class=>'btn btn-success btn-lg'
-/- @posts.each_with_index do |page, i|
+.btn-group.btn-group-justified
+  = link_to_next_page @posts, 'Загрузить еще', :remote => true, :id=>"load_more_link", :class=>'btn btn-default btn-lg'
 
-  h3
-    span' = i + 1
-    = page.title
-  .t-j = raw page.introtext
-  .clearfix
-/= paginate @posts
