--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -49,10 +49,10 @@ br
           .btn-group-vertical
             /a.btn.btn-info.hidden-xs
               h4.times_new_roman  +7 (499) 782-88-12
-            a.btn.btn-info.t-l
+            a.btn.btn-info.t-l href='/pages/deputaty'
               i.fa.fa-group>
               | Обратиться к депутатам
-            a.btn.btn-info.t-l
+            a.btn.btn-info.t-l href='#{new_reception_path}'
               i.fa.fa-building-o>
               | Онлайн приемная аппарата
 
