--- a/app/views/layouts/widgets/_banners.html.slim
+++ b/app/views/layouts/widgets/_banners.html.slim
@@ -5,58 +5,58 @@
       ul#banners.t-c
         li
           a href="http://dom.mos.ru/" target="_blank"
-            img alt="dom.mos.ru"  src="/assets/banners/dom.mos.ru.jpg"
+            = image_tag('banners/dom.mos.ru.jpg')
         li
           a href="http://doroga.mos.ru/" target="_blank"
-            img alt="doroga.mos.ru"  src="/assets/banners/doroga.mos.ru.jpg"
+            = image_tag('banners/doroga.mos.ru.jpg')
         li
           a href="http://www.labor.ru/" target="_self"
-            img alt="labor"  src="/assets/banners/labor.jpg" width="170"
+            = image_tag('banners/labor.jpg')
         li
           a href="http://msu.mos.ru/" target="_blank"
-            img alt="mim"  src="/assets/banners/mim.jpg" width="170"
+            = image_tag('banners/mim.jpg')
         li
           a href="http://mos-saburovo.molparlam.ru/" target="_blank"
-            img alt="molparlam"  src="/assets/banners/molparlam.jpg"
+            = image_tag('banners/molparlam.jpg')
         li
           a href="http://mos.ru/" target="_blank"
-            img alt="mos"  src="/assets/banners/mos.jpg"
+            = image_tag('banners/mos.jpg')
         li
           a href="http://munkontrol.ru/" target="_blank"
-            img alt="munkontrol.ru"  src="/assets/banners/munkontrol.ru.jpg"
+            = image_tag('banners/munkontrol.ru.jpg')
         li
           a href="http://ozpp.ru/" target="_blank"
-            img alt="ozpp"  src="/assets/banners/ozpp.gif"
+            = image_tag('banners/ozpp.gif')
         li
           a href="http://parking.mos.ru/" target="_blank"
-            img alt="parking.mos.ru"  src="/assets/banners/parking.mos.ru.jpg"
+            = image_tag('banners/parking.mos.ru.jpg')
         li
           a href="http://pgu.mos.ru/" target="_blank"
-            img alt="pgu.mos"  src="/assets/banners/pgu.mos.jpg"
+            = image_tag('banners/pgu.mos.jpg')
         li
           a href="http://uao.mos.ru/" target="_blank"
-            img alt="uao"  src="/assets/banners/uao.gif"
+            = image_tag('banners/uao.gif')
         li
           a href="http://sud.mos.ru/" target="_blank"
-            img alt="sud.mos.ru"  src="/assets/banners/sud.mos.ru.jpg"
+            = image_tag('banners/sud.mos.ru.jpg')
         li
           a href="http://uec.mos.ru/" target="_blank"
-            img alt="uec.mos.ru"  src="/assets/banners/uec.mos.ru.jpg"
+            = image_tag('banners/uec.mos.ru.jpg')
         li
           a href="http://uvduao.ru/" target="_blank"
-            img alt="uvduao.ru"  src="/assets/banners/uvduao.ru.jpg" width="170"
+            = image_tag('banners/uvduao.ru.jpg')
         li
           a href="http://duma.mos.ru/" target="_blank"
-            img alt="duma.mos.ru"  src="/assets/banners/duma.mos.ru.jpg" width="170"
+            = image_tag('banners/duma.mos.ru.jpg')
         li
           a href="http://uaomed.ru/" target="_blank"
-            img alt="uaomed.ru"  src="/assets/banners/uaomed.ru.jpg" width="170"
+            = image_tag('banners/uaomed.ru.jpg')
         li
           a href="http://amom.ru/" target="_blank"
-            img alt="amom"  src="/assets/banners/amom.gif"
+            = image_tag('banners/amom.gif')
         li
           a href="http://библиотека234.рф/" target="_blank"
-            img alt="biblioteka"  src="/assets/banners/biblioteka.gif"
+            = image_tag('banners/biblioteka.gif')
         li
           a href="http://budget.mos.ru/" target="_blank"
-            img alt="budget"  src="/assets/banners/budget.jpg"
+            = image_tag('banners/budget.jpg')
