--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,6 +1,6 @@
 #posts
   = render :partial => @posts
 .btn-group.btn-group-justified
-  = link_to_next_page @posts, 'Загрузить еще', :remote => true, :id=>"load_more_link", :class=>'btn btn-default btn-lg'
+  = link_to_next_page @posts, 'Загрузить еще...', :remote => true, :id=>"load_more_link", :class=>'btn btn-default btn-lg'
 br
 
