--- a/app/views/layouts/fullpage.html.slim
+++ b/app/views/layouts/fullpage.html.slim
@@ -21,7 +21,7 @@ html
           | these menus will be under the push wrapper
 
         nav#menu-3.st-menu.st-effect-3
-          = render 'layouts/sideMenu'
+          = render 'layouts/sidemenu'
 
 
 
