--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -45,6 +45,6 @@ html
             = render 'layouts/widgets/banners'
             = render 'layouts/footer'
 
-    = javascript_include_tag "sidebarEffects.js"
+    = javascript_include_tag "sidebareffects"
 
 
