--- a/app/views/layouts/fullpage.html.slim
+++ b/app/views/layouts/fullpage.html.slim
@@ -44,6 +44,6 @@ html
 
             = render 'layouts/footer'
 
-    = javascript_include_tag "sidebarEffects.js"
+    = javascript_include_tag "sidebareffects.js"
 
 
