--- a/app/views/layouts/_SideMenu.html.slim
+++ b/app/views/layouts/_SideMenu.html.slim
@@ -1,5 +1,9 @@
 - Category.all.each_with_index do |cat, i|
 
+  h4 МОСКВОРЕЧЬЕ-САБУРОВО
+
+  p Testing...
+
   .col-md-4
     .inline.cat-header
       i(class='#{cat.icon} fa-lg')
