--- a/app/views/layouts/_slider.html.slim
+++ b/app/views/layouts/_slider.html.slim
@@ -6,21 +6,20 @@
         #slide
           - unless post.intro_post_image.blank?
             = render partial: 'posts/post_title', :locals => { :post => post }
-            hr.post
+            /hr.post
             .row
               .col-md-4
                 = image_tag(post.intro_post_image)
               .col-md-8
                 = raw post.introtext
-            hr
+            /hr
             - unless post.fulltext.empty?
               a.btn.btn-success.btn-sm.pull-right href='#{post_url(post)}'Подробнее...
           - else
             /h4.t-c = post.title
             = render partial: 'posts/post_title', :locals => { :post => post }
-            hr
+            /hr
             .t-j
               = raw post.introtext
-            hr
             - unless post.fulltext.empty?
               a.btn.btn-success.btn-sm.pull-right href='#{post_url(post)}'Подробнее...
